--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 	<link rel="stylesheet" media="all" href="index.css">
 </head>
 <body>
-
-
     <nav>
         <h2>目次</h2>
         <ul>
             <li>
-                <a href="index.html">メインページ</a>
+                <a href="">メインページ</a>
             </li>
             <li>
                 <a href="recordOfProceedings.html" >議事録</a>
             </li>
         </ul>
     </nav>
+    <div id=main>
+        MC隠居部
+    </div>
 </body>
 </html>
