メインページに戻らないバグの修正

--- a/recordOfProceedings.html
+++ b/recordOfProceedings.html
@@ -40,7 +40,7 @@
         <h2>目次</h2>
         <ul>
             <li>
-                <a href="">メインページ</a>
+                <a href="/">メインページ</a>
             </li>
             <li>
                 <a href="recordOfProceedings.html" >議事録</a>
