--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>目次</h2>
         <ul>
             <li>
-                <a href="">メインページ</a>
+                <a href="/">メインページ</a>
             </li>
             <li>
                 <a href="recordOfProceedings.html" >議事録</a>
