目次の修正

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>MC隠居部</title>
+	<title>MC隠居部メインページ</title>
 	<link rel="stylesheet" media="all" href="index.css">
 </head>
 <body>
@@ -14,12 +14,25 @@
                 <a href="https://hsoar1.github.io/MCRetirementClub/">メインページ</a>
             </li>
             <li>
-                <a href="recordOfProceedings.html" >議事録</a>
+                <a>マインクラフト</a>
+            </li>
+            <li>
+                &nbsp;&nbsp;&nbsp;<a>議事録</a>
+            </li>
+            <li>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mineCraft/recordOfProceedings.html">第一回議事録</a>
+            </li>
+            <li>
+                &nbsp;&nbsp;&nbsp;&nbsp;<a>企画</a>
             </li>
         </ul>
     </nav>
     <div id=main>
-        MC隠居部
+        
+        <div style="text-align:center">
+            <img src="src/maxresdefault.jpg" width="128" height="78" alt="icon"><h1>MC隠居部</h1>
+            
+        </div>
     </div>
 </body>
 </html>
