--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>MC隠居部メインページ</title>
-	<link rel="stylesheet" media="all" href="index.css">
+	<link rel="stylesheet" media="all" href="style.css">
 </head>
 <body>
     <nav>
